# eii-core

./: .bdsignore.all  .dockerignore  .gitignore  CONTRIBUTING.md  Etcd_Secrets_Configuration.md  Etcd_Secrets_and_MsgBus_Endpoint_Configuration.md  Etcd_and_MsgBus_Endpoint_Configuration.md  Gopkg.toml  Installing_docker_pre_requisites.md  README.md  README_fpga.md  TROUBLESHOOT.md  baremetal_setup.md  classifier_requirements.txt  classifier_startup.py  common-docker-compose.yml  databus_requirements.txt  eis_builder.py  eis_config.json  enable_kapacitor_task.sh  entrypoint_classifier.sh  factory.json  factory.py  factory_cam.json  factory_file.json  license.txt  run_kapacitord.sh  vi_requirements.txt
common/libs/ConfigManager/db_client/: CMakeLists.txt  README.md
common/libs/ConfigManager/db_client/etcd_client/: CMakeLists.txt  README.md  compile_commands.json
common/libs/ConfigManager/db_client/etcd_client/cmake/: EtcdClientConfig.cmake.in  FindPROTOBUF.cmake  libdbclient.pc.in
common/libs/ConfigManager/db_client/etcd_client/examples/: CMakeLists.txt  etcd_client.cc
common/libs/ConfigManager/db_client/etcd_client/include/: etcd_client.h  etcd_client_plugin.h
common/libs/ConfigManager/db_client/etcd_client/src/: auth.pb.cc  etcd_client.cc  etcd_client_plugin.c  etcd_client_wrapper.cc  etcdserver.pb.cc
common/libs/ConfigManager/db_client/etcd_client/tests/: etcd_client_plugin.cc
common/libs/ConfigManager/db_client/examples/: CMakeLists.txt  db_client_etcd.c
common/libs/ConfigManager/db_client/include/: db_client.h
common/libs/ConfigManager/db_client/tests/: db_client_tests.cc
common/libs/ConfigMgr/: .gitignore  CMakeLists.txt  README.md  control  grpc_deb.sh  grpc_zip.sh  install.sh
common/libs/ConfigMgr/cmake/: EIIConfigMgrConfig.cmake.in  EIIConfigMgrStaticConfig.cmake.in  EISConfigMgrConfig.cmake.in  EISConfigMgrNewConfig.cmake.in  EISConfigMgrStaticConfig.cmake.in  InstallEIIConfigMgr.cmake  libeiiconfigmanager.pc.in  libeiiconfigmanager_static.pc.in  libeisconfigmanager.pc.in  libeisconfigmanager_static.pc.in  libneweisconfigmgr.pc.in
common/libs/ConfigMgr/cmake/apkbuilder/: APKBUILD.in  ApkBuilder.cmake  Dockerfile
common/libs/ConfigMgr/cpp/: app_cfg.cpp  client_cfg.cpp  config_mgr.cpp  publisher_cfg.cpp  server_cfg.cpp  subscriber_cfg.cpp
common/libs/ConfigMgr/db_client/: CMakeLists.txt  install.sh
common/libs/ConfigMgr/db_client/etcd_client/cmake/: DBClientConfig.cmake.in  libetcdclient.pc.in
common/libs/ConfigMgr/db_client/etcd_client/examples/: CMakeLists.txt
common/libs/ConfigMgr/db_client/etcd_client/include/: etcd_client.h  etcd_client_plugin.h
common/libs/ConfigMgr/db_client/etcd_client/src/: Makefile  etcd_client.cc  etcd_client_plugin.c  etcd_client_wrapper.cc
common/libs/ConfigMgr/db_client/etcd_client/tests/: CMakeLists.txt
common/libs/ConfigMgr/db_client/examples/: CMakeLists.txt
common/libs/ConfigMgr/db_client/include/: db_client.h
common/libs/ConfigMgr/db_client/tests/: CMakeLists.txt
common/libs/ConfigMgr/examples/: CMakeLists.txt  README.md  VideoAnalytics_interfaces.json  VideoIngestion_interfaces.json  Visualizer_interfaces.json  env.sh  kv_store_etcd.c  sample_client.c  sample_client.cpp  sample_getvalue.cpp  sample_pub.cpp  sample_publisher.c  sample_server.c  sample_server.cpp  sample_sub.cpp  sample_subscriber.c
common/libs/ConfigMgr/examples/configs/: VideoAnalytics_interfaces.json  VideoIngestion_interfaces.json  Visualizer_interfaces.json  etcd_kv_store_config.json
common/libs/ConfigMgr/go/ConfigMgr/eiiconfigmgr/: ConfigManager.go  Util.go  cgo.go  client.go  publisher.go  requester.go  server.go  service.go  subscriber.go
common/libs/ConfigMgr/go/ConfigMgr/eisconfigmgr/: ConfigManager.go  Util.go  cgo.go  client.go  publisher.go  requester.go  server.go  service.go  subscriber.go
common/libs/ConfigMgr/go/ConfigMgr/examples/: README.md  app_config.go  echo_client.go  echo_service.go  go_env.sh  publisher.go  subscriber.go
common/libs/ConfigMgr/include/eii/config_manager/: app_cfg.h  app_cfg.hpp  base_cfg.h  c_base_cfg.h  c_sub_cfg.h  (+20 more)
common/libs/ConfigMgr/kv_store_plugin/: CMakeLists.txt  README.md
common/libs/ConfigMgr/kv_store_plugin/etcd_client/: CMakeLists.txt  README.md
common/libs/ConfigMgr/kv_store_plugin/examples/: kv_store_etcd.c
common/libs/ConfigMgr/kv_store_plugin/include/: kv_store_plugin.h
common/libs/ConfigMgr/kv_store_plugin/src/: kv_store_plugin.c
common/libs/ConfigMgr/kv_store_plugin/tests/: CMakeLists.txt  kv_store_client_tests.cc  kv_store_client_tests.cpp
common/libs/ConfigMgr/python/: CMakeLists.txt  README.md  setup.py  setup.py.in
common/libs/ConfigMgr/python/cfgmgr/: __init__.py  app_config.pxd  app_config.pyx  client.pxd  client.pyx  config_manager.pyx  exc.py  libeiiconfigmanager.pxd  libeisconfigmanager.pxd  libneweisconfigmgr.pxd  publisher.pxd  publisher.pyx  server.pxd  server.pyx  subscriber.pxd  subscriber.pyx  util.pxd  util.pyx
common/libs/ConfigMgr/python/examples/: README.md  echo_client.py  echo_service.py  publisher.py  sample_get_value.py  subscriber.py
common/libs/ConfigMgr/src/: app_cfg.cpp  base_cfg.c  cfg_mgr.c  cfgmgr.c  cfgmgr_util.c  cli_cfg.c  client_cfg.cpp  config_client.cpp  config_handler.cpp  config_mgr.cpp  config_publisher.cpp  config_server.cpp  config_subscriber.cpp  pub_cfg.c  publisher_cfg.cpp  serv_cfg.c  server_cfg.cpp  sub_cfg.c  subscriber_cfg.cpp  util_cfg.c
common/libs/ConfigMgr/src/kv_store_plugin/: CMakeLists.txt  README.md  install.sh  kv_store_plugin.c
common/libs/ConfigMgr/tests/: CMakeLists.txt  cfgmgr_c_apis_unit_tests.cpp  config_manager_unit_tests.cpp  kv_store_client_tests.cpp  kv_store_unittest_config.json
common/libs/DynLibLoad/: .gitignore  CMakeLists.txt  README.md
common/libs/DynLibLoad/cmake/: DynLibLoadConfig.cmake.in  EIIDynLibLoadConfig.cmake.in  EISDynLibLoadConfig.cmake.in
common/libs/DynLibLoad/examples/: CMakeLists.txt  example.c  load_example.c  source.sh
common/libs/DynLibLoad/src/: dynlibload.c
common/libs/DynLibLoad/tests/: CMakeLists.txt  dynlibload_tests.cpp  test_library.c
(+982 files in other folders)
